[v8r8p19]
use DIRAC v6r17p33

* report error in mail
* Only consider replicas in fromSEs in _byRun
* Avoid considering runs that miss one detector
* More pythonic way of doing it
* Fix divide-by-zero error
* Add list of sites in jobs info
* More logging
* Remove backward compatibility for PluginsWithNoRunInfo

[v8r8p18]
use DIRAC v6r17p32

* Use the correct keepSEs
* more fixes to RemoveReplicasKeepDestination
* avoid warning
* Get list of plugins with no run info from Operations and use it in scripts
* remove temporary methods

[v8r8p17]
use DIRAC v6r17p31

* only check run tick if the run was not assigned
* Fix printout and make pylint happier
* Improve information when debugging Failed jobs
* add docstring and replace "id"
* Don't look for directories if files or BKQuery are given
* Improve search for transformation
* allow to give a transformation name and not only ID
* add option to get the list of directories fomr a BK query
* fix to get list of directories from file
* Fix for getting directories form a file
* Tier1-BUFFER -> Tier1-Buffer

[v8r8p16]
use DIRAC v6r17p30

* Tier1-ARCHIVE -> Tier1-Archive
* Tier1-BUFFER -> Tier1-Buffer
* tune logging
* do not try and set Unused files in MaxReset
* CI:Make sre grep returns less result and does not kill the container
* for some reason MCSimulation is in DataProcessing types in the CS
* Full review of code, make pylint as happy as possible
* add docstrings
* CI: Add coverage information
* Docs: correct release doc
* do not remove replica flag when setting problematic
* get rid of has_key and use iterators


[v8r8p15]
use DIRAC v6r17p29

* GitlabCI: unit test on merge request

[v8r8p14]
use DIRAC v6r17p28

* StorageUsageAgent: allow to disable the random sleep at startup

[v8r8p13]
use DIRAC v6r17p27

* simplified template
* added test for steps
* fix for histomerge production type
* allow to save the files in CSV format
* Remove wrongly hardtyped parameters
* Fix a problem with the compression level

[v8r8p12]