@@ -1,6 +1,6 @@
 {
   "name": "LHCbDirac",
-  "version": "v8r8p19",
+  "version": "v8r8p20",
   "used_projects": {
     "project": [
       [ "Dirac", "v6r17p33",
